--- a/contact.html
+++ b/contact.html
@@ -14,25 +14,36 @@
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-            class="w-6 h-6 md:hidden">
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-6 md:hidden cursor-pointer">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
 
         <ul class="flex gap-5 text-gray-600 hidden md:flex">
             <li>
-                <a class="hover:underline hover:text-black" href="#">Home</a>
+                <a class="hover:underline hover:text-black" href="./index.html">Home</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-black" href="#">Products</a>
+                <a class="hover:underline hover:text-black" href="./products.html">Products</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-black" href="#">Contact</a>
+                <a class="hover:underline hover:text-black" href="./contact.html">Contact</a>
             </li>
         </ul>
     </nav>
 
+    <!--Side Navbar-->
+    <section id="sidenav" class="bg-green-100 fixed  top-0 z-20 transition-all duration-1000" style="width:50%; height:100vw; right:-50%">
+        <div class="text-right p-5">
+            <p id="close-nav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col items-center gap-10">
+            <li><a class="hover:underline hover:text-black" href="./index.html">Home</a></li>
+            <li><a class="hover:underline hover:text-black" href="./products.html">Products</a></li>
+            <li><a class="hover:underline hover:text-black" href="./contact.html">Contact</a></li>
+        </ul>
+    </section>
 <!--Contact Form-->
 <section class="bg-white dark:bg-gray-900">
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
@@ -62,6 +73,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, soluta!</p>
             <p>@ 2021 Greenday.com</p>
           </section>
+
+          <script src="contact.js"></script>
       </body>
       
       </html>
